Modified build scripts. TODO: Cleanup this mess of gradle scripts!!!!