@@ -5,12 +5,19 @@ repositories {
 	mavenCentral()
 }
 dependencies {
-	testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
-	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
-	testImplementation "org.hamcrest:hamcrest-library:1.3"
+	compile "org.junit.jupiter:junit-jupiter-api:5.6.0"
+	runtimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
 	compile fileTree(dir: "../DefaultPlugins/build/libs", include: ["*.jar"])
 }
 compileJava {
+	doFirst {
+        options.compilerArgs = [
+            '--module-path', classpath.asPath.replaceAll("DefaultPlugins",""), 
+            '--add-modules', 'org.junit.jupiter.api',
+			"--enable-preview", "--source","15"
+        ]
+        classpath = files()
+    }
 	options.fork = true
 	options.incremental = true
 }
